# zcash-gpu-thesis

./: .gitignore  Cargo.toml  README.md
build_scripts/aarch64-linux-android/: aarch64-test-release  build_tests_galaxy_aarch64-debug.sh  build_tests_galaxy_aarch64.sh  build_tests_galaxy_armv7-debug.sh  build_tests_galaxy_armv7.sh
build_scripts/armv7-linux-androideabi/: armv7-test  armv7-test-release  build_tests_galaxy_armv7-debug.sh  build_tests_galaxy_armv7.sh
build_scripts/x86/: run_test.sh  run_test_debug.sh
build_scripts/x86_64/: run_test.sh  run_test_debug.sh  run_test_fast.sh
librustzcash/: a.out  test_multiexp.c
librustzcash/.cargo/: config
librustzcash/bellman/: Cargo.toml  a.out  main
librustzcash/bellman/src/: bls12-381.cl  domain.rs  lib.rs  multiexp.rs
librustzcash/bellman/src/groth16/: prover.rs
librustzcash/bellman/src/groth16/tests/: dummy_engine.rs
librustzcash/bellman/tests/: tests.rs
librustzcash/librustzcash/: Cargo.toml
librustzcash/librustzcash/include/: librustzcash.h
librustzcash/librustzcash/src/: rustzcash.rs
librustzcash/pairing/: Cargo.toml
src/: main.rs  primitives.cl
tests/: tests.rs
tex/: MastersDoctoralThesis.cls  example.bib  main.aux  main.blg  main.fdb_latexmk  main.fls  main.lof  main.out  main.tex  main.toc  thesis.odp
tex/Appendices/: AppendixA.aux
tex/Chapters/: Chapter1.aux  Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter5.tex  Chapter6.tex  Chapter7.tex  Chapter8.tex  Chapter9.tex
tex/Figures/: finalresults.py  profiler.py  proofparts.py  wholeproof.py
(+7 files in other folders)
